sass/_components.scss
///////////////////////////////////////////////////////
//
.logo {
    height: 3.25rem;
    margin-left: 2rem;
}




///////////////////////////////////////////////////////
// SEARCH
.search {
    background-color: orangered;
    flex: 0 0 40%;

    display: flex;
    align-items: center;
    justify-content: center;

    &__input {
        font-family: inherit;
        font-size: inherit;
        background-size: var(--color-grey-light-2);
        border: none;
        padding: .7rem 2rem;
        border-radius: 100px;
        width: 90%;
        transition: all .2s;
        margin-right: -3.5rem;
        
        &:focus {
            outline: none;
            width: 100%;
            background-color: var(--color-grey-light-3);
        }
    }
    
    &__input:focus + &__button {
        background-color: var(--color-grey-light-3);
    }

    &__button {
        border:none;
        background-color: var(--color-grey-light-2);

        &:focus {
            outline: none;
        }

        &::-webkit-input-placeholder {
            font-weight: 100;
            color: var(--color-grey-light-4);
        }

        &:active {
            transform: translateY(2px);
        }
    }
    &__icon {
        height: 2rem;
        width: 2rem;
        fill: var(--color-grey-dark-3)
    }
}


///////////////////////////////////////////////////////
// USER NAVIGATION

.user-nav {
    background-color: greenyellow;
    display: flex;
    align-items: center;
    align-self: stretch;
    
    & > * {
        padding: 0 2rem;
        cursor: pointer;
        height: 100%;
        display: flex;
        align-items: center;
    }
    & > *:hover {
        background-color: var(--color-grey-light-2);
    }
    
    
    &__icon-box {
        position: relative;
    }
    &__icon {
        height: 2.25rem;
        width: 2.25rem;
        fill: var(--color-grey-dark-2);
    }
    &__notification {
        font-size: .8rem;
        height: 1.75rem;
        width: 1.75rem;
        border-radius: 50%;
        background-color: var(--color-primary);
        color: #fff;
        position: absolute;
        top: 1.5rem;
        right: 1.3rem;
        display: flex;
        align-items: center;
        justify-content: center ;
    }
    &__user-photo {
        height: 3.75rem;
        border-radius: 50%;
        margin-right: 1rem;
    }
    &__user-name {

    }
}


/////////////////////////////////////
// Side Nav
.side-nav {
    font-size: 1.4rem;
    list-style: none;
    margin-top: 3.5rem;
    text-decoration: none;
    text-transform: uppercase;

    &__item {
        position: relative;
        padding: 1.5rem .1rem;
        color: var(--color-grey-light-1);

        &:not(:last-child) {
            margin-bottom: .5rem;
        }
    }
    &__item::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        width: 3px;
        background-color: var(--color-primary);
        transform: scaleY(0);
        // transform starts in middle; if you want it to start from the bottom -- transform-origin: bottom; 
        transition: transform .2s, 
                    width .2s cubic-bezier(1, 0, 0, 1) .2s,
                    background-color .1s;
        
        //  time1  time2,   time1 is the duration; time2 is the delay
    }
        
    &__item:hover::before,
    &__item--active:hover::before {
        transform: scaleY(1);
        width: 100%;
    }

    &__item:active::before {
        background-color: var(--color-primary-light);
    }

    &__link:link,
    &__link:visited {
        color: var(--color-grey-light-1);
        text-decoration: none;
        text-transform: uppercase;
        padding: 1.5rem 3rem;
        display: flex;
        align-content: center;
        position: relative; 
        z-index: 10;
    }
    &__icon {
        width: 1.75rem;
        height: 1.75rem;
        margin-left: 2rem;
        margin-right: 1rem;
        fill: var(--color-grey-light-1);
        position: absolute;
        top: 50%;
        -ms-transform: translateY(-50%);
        transform: translateY(-50%);
    }
    &__text {
        text-decoration: none;
        text-transform: uppercase;
        color: var(--color-grey-light-1);
        position: absolute;
        top: 50%;
        left: 5rem;
        -ms-transform: translateY(-50%);
        transform: translateY(-50%);
    }
}


/////////////////////////////////////
// LEGAL TEXT

.legal {
    
    font-size: 1.2rem;
    color:var(--color-grey-light-4);
    text-align: center;
    padding: 2.5rem;
}

/////////////////////////////////////
// Gallery VIew

.gallery {
    display: flex;
    
    &__photo {
        width: 100%;
        display: block ;
    }
    
    
}



/////////////////////////////////////
// Overview

.overview {
    display: flex;
    &__heading {}
    &__stars {
        margin-right: auto;
    }

    &__icon-star,
    &__icon-location {
        
        width: 1.75rem;
        height: 1.75rem;
        margin-right: 2rem;
        fill: var(--color-primary);
        
        @media only screen {
            margin-right: 0;
            margin-bottom: .7rem;
            width: 1.5rem;
            height: 1.5rem;
        }
    }
    &__location {
    }
    &__rating {}
    &__rating-average {}
    &__rating-count {}
}

